--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
@@ -1,85 +1,85 @@
-@if(uveStore.$editorState(); as es) {
+@if (uveStore.$editorProps(); as ep) {
+    <dot-edit-ema-toolbar (editUrlContentMap)="editContentMap($event)" />
 
-<dot-edit-ema-toolbar (editUrlContentMap)="editContentMap($event)" />
-
-@if(es.seoTools && $ogTags() && ogTagsResults$) {
-<dot-results-seo-tool
-    [seoMedia]="es.seoTools.socialMedia"
-    [seoOGTags]="$ogTags()"
-    [seoOGTagsResults]="ogTagsResults$"
-    data-testId="results-seo-tool"></dot-results-seo-tool>
-} @if(es.showEditorContent) {
-
-<div class="editor-content" data-testId="editor-content">
-    <div
-        [ngClass]="{
-            'iframe-wrapper--device': es.iframe.wrapper.isDevice
-        }"
-        [ngStyle]="{
-            width: es.iframe.wrapper.width,
-            height: es.iframe.wrapper.height
-        }"
-        class="iframe-wrapper">
-        <iframe
-            (load)="onIframePageLoad(es.iframe.state)"
-            [src]="es.iframe.src | safeUrl"
-            [title]="host"
-            [ngStyle]="{
-                pointerEvents: es.iframe.pointerEvents,
-                opacity: es.iframe.opacity
+    @if (ep.seoTools && $ogTags() && ogTagsResults$) {
+        <dot-results-seo-tool
+            [seoMedia]="ep.seoTools.socialMedia"
+            [seoOGTags]="$ogTags()"
+            [seoOGTagsResults]="ogTagsResults$"
+            data-testId="results-seo-tool"></dot-results-seo-tool>
+    }
+    @if (ep.showEditorContent) {
+        <div class="editor-content" data-testId="editor-content">
+            <div
+                [ngClass]="{
+                    'iframe-wrapper--device': ep.iframe.wrapper.isDevice
+                }"
+                [ngStyle]="{
+                    width: ep.iframe.wrapper.width,
+                    height: ep.iframe.wrapper.height
+                }"
+                class="iframe-wrapper">
+                <iframe
+                    (load)="onIframePageLoad(ep.iframe.state)"
+                    [src]="ep.iframe.src | safeUrl"
+                    [title]="host"
+                    [ngStyle]="{
+                        pointerEvents: ep.iframe.pointerEvents,
+                        opacity: ep.iframe.opacity
+                    }"
+                    #iframe
+                    data-testId="iframe"
+                    width="100%"
+                    height="100%"></iframe>
+                @if (ep.progressBar) {
+                    <p-progressBar
+                        [ngStyle]="{ position: 'absolute', top: '0', left: '0', width: '100%' }"
+                        [style]="{ height: '6px' }"
+                        data-testId="progress-bar"
+                        mode="indeterminate"></p-progressBar>
+                }
+                @if (ep.contentletTools; as contentletTools) {
+                    <dot-ema-contentlet-tools
+                        (edit)="handleEditContentlet($event)"
+                        (editVTL)="handleEditVTL($event)"
+                        (delete)="deleteContentlet($event)"
+                        (addWidget)="dialog.addWidget($event)"
+                        (addForm)="dialog.addForm($event)"
+                        (addContent)="dialog.addContentlet($event)"
+                        [hide]="contentletTools.hide"
+                        [contentletArea]="contentletTools.contentletArea"
+                        [isEnterprise]="contentletTools.isEnterprise"
+                        data-testId="contentlet-tools" />
+                }
+                @if (ep.dropzone; as dropzone) {
+                    <dot-ema-page-dropzone
+                        [containers]="dropzone.bounds"
+                        [dragItem]="dropzone.dragItem"
+                        data-testId="dropzone" />
+                }
+            </div>
+        </div>
+    }
+    @if (ep.palette; as palette) {
+        <dot-edit-ema-palette
+            [languageId]="palette.languageId"
+            [containers]="palette.containers"
+            [variantId]="palette.variantId"
+            data-testId="palette" />
+    }
+    @if (ep.dialogs) {
+        <dot-edit-ema-dialog
+            (action)="onCustomEvent($event)"
+            (reloadFromDialog)="reloadFromDialog()"
+            #dialog
+            data-testId="ema-dialog"></dot-edit-ema-dialog>
+        <p-confirmDialog
+            [style]="{
+                width: '400px'
             }"
-            #iframe
-            data-testId="iframe"
-            width="100%"
-            height="100%"></iframe>
-        @if(es.progressBar) {
-
-        <p-progressBar
-            [ngStyle]="{ position: 'absolute', top: '0', left: '0', width: '100%' }"
-            [style]="{ height: '6px' }"
-            data-testId="progress-bar"
-            mode="indeterminate"></p-progressBar>
-        } @if(es.contentletTools; as contentletTools) {
-
-        <dot-ema-contentlet-tools
-            (edit)="handleEditContentlet($event)"
-            (editVTL)="handleEditVTL($event)"
-            (delete)="deleteContentlet($event)"
-            (addWidget)="dialog.addWidget($event)"
-            (addForm)="dialog.addForm($event)"
-            (addContent)="dialog.addContentlet($event)"
-            [hide]="contentletTools.hide"
-            [contentletArea]="contentletTools.contentletArea"
-            [isEnterprise]="contentletTools.isEnterprise"
-            data-testId="contentlet-tools" />
-        } @if(es.dropzone; as dropzone) {
-
-        <dot-ema-page-dropzone
-            [containers]="dropzone.bounds"
-            [dragItem]="dropzone.dragItem"
-            data-testId="dropzone" />
-        }
-    </div>
-</div>
-} @if(es.palette; as palette) {
-
-<dot-edit-ema-palette
-    [languageId]="palette.languageId"
-    [containers]="palette.containers"
-    [variantId]="palette.variantId"
-    data-testId="palette" />
-} @if ( es.dialogs) {
-<dot-edit-ema-dialog
-    (action)="onCustomEvent($event)"
-    (reloadFromDialog)="reloadFromDialog()"
-    #dialog
-    data-testId="ema-dialog"></dot-edit-ema-dialog>
-<p-confirmDialog
-    [style]="{
-        width: '400px'
-    }"
-    rejectIcon="hidden"
-    acceptIcon="hidden"
-    rejectButtonStyleClass="p-button-outlined"
-    data-testId="confirm-dialog"></p-confirmDialog>
-} }
+            rejectIcon="hidden"
+            acceptIcon="hidden"
+            rejectButtonStyleClass="p-button-outlined"
+            data-testId="confirm-dialog"></p-confirmDialog>
+    }
+}
