--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/ema-contentlet-tools/ema-contentlet-tools.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/ema-contentlet-tools/ema-contentlet-tools.component.html
@@ -13,45 +13,55 @@
     <p-menu [model]="items()" [popup]="true" #menu appendTo="body" data-testId="menu-add"></p-menu>
 }
 
-<div *ngIf="!isContainerEmpty" [ngStyle]="styles.actions" class="actions" data-testId="actions">
-    @if (contentletArea.payload.vtlFiles?.length) {
-        <p-menu [model]="vtlFiles" [popup]="true" #menuVTL appendTo="body" data-testId="menu-vtl" />
-        <p-button
-            (click)="menuVTL.toggle($event)"
-            data-testId="edit-vtl-button"
-            styleClass="p-button-rounded p-button-raised"
-            icon="pi pi-code" />
-    }
-    @if (contentletArea.payload.container) {
-        <p-button
-            (dragstart)="dragStart($event)"
-            [attr.data-item]="
-                {
-                    container: contentletArea.payload.container,
-                    contentlet: contentletArea.payload.contentlet,
-                    move: true
-                } | json
-            "
-            data-type="contentlet"
-            draggable="true"
-            data-testId="drag-button"
-            styleClass="p-button-rounded p-button-raised"
-            icon="pi pi-arrows-alt" />
-        <p-button
-            (click)="delete.emit(contentletArea.payload)"
-            data-testId="delete-button"
-            styleClass="p-button-rounded p-button-raised delete"
-            icon="pi pi-times" />
-    }
+@if (!isContainerEmpty) {
+    <div [ngStyle]="styles.actions" class="actions" data-testId="actions">
+        @if (contentletArea.payload.vtlFiles?.length) {
+            <p-menu
+                [model]="vtlFiles"
+                [popup]="true"
+                #menuVTL
+                appendTo="body"
+                data-testId="menu-vtl" />
+            <p-button
+                (click)="menuVTL.toggle($event)"
+                data-testId="edit-vtl-button"
+                styleClass="p-button-rounded p-button-raised"
+                icon="pi pi-code" />
+        }
+        @if (contentletArea.payload.container) {
+            <p-button
+                (dragstart)="dragStart($event)"
+                [attr.data-item]="
+                    {
+                        container: contentletArea.payload.container,
+                        contentlet: contentletArea.payload.contentlet,
+                        move: true
+                    } | json
+                "
+                data-type="contentlet"
+                draggable="true"
+                data-testId="drag-button"
+                styleClass="p-button-rounded p-button-raised"
+                icon="pi pi-arrows-alt" />
+            <p-button
+                (click)="delete.emit(contentletArea.payload)"
+                data-testId="delete-button"
+                styleClass="p-button-rounded p-button-raised delete"
+                icon="pi pi-times" />
+        }
 
-    <p-button
-        (click)="edit.emit(contentletArea.payload)"
-        data-testId="edit-button"
-        styleClass="p-button-rounded p-button-raised"
-        icon="pi pi-pencil" />
-</div>
+        <p-button
+            (click)="edit.emit(contentletArea.payload)"
+            data-testId="edit-button"
+            styleClass="p-button-rounded p-button-raised"
+            icon="pi pi-pencil" />
+    </div>
+}
 
 <div [ngStyle]="styles.bounds" class="bounds" data-testId="bounds"></div>
-<div *ngIf="contentletArea" class="drag-image" #dragImage data-testId="drag-image">
-    {{ contentletArea.payload.contentlet.contentType }}
-</div>
+
+@if (contentletArea) {
+    <div class="drag-image" #dragImage data-testId="drag-image">
+        {{ contentletArea.payload.contentlet.contentType }}
+    </div>
+}
