--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/components/edit-ema-palette-content-type/edit-ema-palette-content-type.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/components/edit-ema-palette-content-type/edit-ema-palette-content-type.component.html
@@ -13,12 +13,9 @@
 </div>
 
 <div class="content-types">
-    <dot-spinner
-        *ngIf="paletteStatus === EDIT_EMA_PALETTE_STATUS.LOADING; else content"
-        [size]="'40px'"
-        [borderSize]="'8px'"></dot-spinner>
-
-    <ng-template #content>
+    @if (paletteStatus === EDIT_EMA_PALETTE_STATUS.LOADING) {
+        <dot-spinner [size]="'40px'" [borderSize]="'8px'"></dot-spinner>
+    } @else {
         @for (contentType of contentTypes; track contentType.id; let i = $index) {
             <div
                 [attr.data-item]="
@@ -49,5 +46,5 @@
                 <dot-icon [size]="20" class="drag-icon" name="drag_indicator"></dot-icon>
             </div>
         }
-    </ng-template>
+    }
 </div>
