--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-persona-selector/edit-ema-persona-selector.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-persona-selector/edit-ema-persona-selector.component.html
@@ -5,18 +5,18 @@
     class="p-button-text p-button-sm"
     pButton
     data-testId="persona-button">
-    <p-avatar
-        *ngIf="value?.identifier !== 'modes.persona.no.persona'; else noPersona"
-        [text]="value?.name"
-        [image]="value?.photo"
-        styleClass="ema-persona__avatar-selected"
-        dotAvatar></p-avatar>
-    <ng-template #noPersona>
+    @if (value?.identifier !== 'modes.persona.no.persona') {
+        <p-avatar
+            [text]="value?.name"
+            [image]="value?.photo"
+            styleClass="ema-persona__avatar-selected"
+            dotAvatar></p-avatar>
+    } @else {
         <p-avatar
             [text]="'modes.persona.no.persona' | dm"
             styleClass="ema-persona__avatar-selected"
             dotAvatar></p-avatar>
-    </ng-template>
+    }
 </button>
 <p-overlayPanel #op styleClass="edit-ema-selector" data-testId="persona-op">
     <p-listbox
