fix small message for empty contentlets

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/components/edit-ema-palette-contentlets/edit-ema-palette-contentlets.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/components/edit-ema-palette-contentlets/edit-ema-palette-contentlets.component.html
@@ -52,7 +52,7 @@
             }
         </div>
     } @else {
-        No content to show
+        <div class="empty-palette">{{ 'edit.ema.empty.palette' | dm }}</div>
     }
 
     <p-paginator
