--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/components/edit-ema-palette-contentlets/edit-ema-palette-contentlets.component.scss
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/components/edit-ema-palette-contentlets/edit-ema-palette-contentlets.component.scss
@@ -88,3 +88,10 @@ p-paginator {
     right: 0;
     width: 100%;
 }
+
+.empty-palette {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
