--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/dot-ema-info-display/dot-ema-info-display.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/dot-ema-info-display/dot-ema-info-display.component.html
@@ -1,10 +1,11 @@
 @if (uveStore.$infoDisplayOptions(); as op) {
-    <p-button
-        *ngIf="op.actionIcon"
-        (onClick)="handleAction(op)"
-        [icon]="op.actionIcon"
-        styleClass="p-button-text p-button-sm p-button-rounded"
-        data-testId="info-action"></p-button>
+    @if (op.actionIcon) {
+        <p-button
+            (onClick)="handleAction(op)"
+            [icon]="op.actionIcon"
+            styleClass="p-button-text p-button-sm p-button-rounded"
+            data-testId="info-action"></p-button>
+    }
 
     <div class="info-container">
         @if (!!op.icon) {
