chore: Fix error loading the DotCategoryFieldSidebarComponent (#29279)
### Parent Issue

https://github.com/dotCMS/core/issues/29275

### Proposed Changes
* Add proper typing to changeMode output
* Move the effect to ngOnInit with explicit inject to avoid form control
errors
* Change hasSelectedCategories to a calculated signal
* Add `type=button` in category button to avoid events with other input
fields

### Checklist
- [x] Tests
- [x] Translations
- [x] Security Implications Contemplated (add notes if applicable)

### Additional Info

As a user, when you create new content with a text field, focus on that
field, and then press Enter, the side menu related to the category field
appears, and this behavior is a bug.


https://github.com/user-attachments/assets/95efc9de-1aec-4686-9ded-640ee95f3b84

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
@@ -9,6 +9,7 @@
     <ng-template pTemplate="header">
         <div class="flex flex-row category-field__header">
             <button
+                type="button"
                 (click)="sidebar.close($event)"
                 class="p-button-rounded p-button-text"
                 data-testId="back-btn"
