fix(edit-content): add // at the beginning (#29308)
### Parent Issue

https://github.com/dotCMS/core/issues/29303

### Proposed Changes
* Changes in services and component to handle ` //` at the beginning
* Refactor signal store to avoid split methods on folders

### Checklist
- [x] Tests
- [x] Translations
- [x] Security Implications Contemplated (add notes if applicable)

### Additional Info


### Screenshots

![Screenshot 2024-07-19 at 3 21
32 PM](https://github.com/user-attachments/assets/25fb864d-ac74-4e2e-a3d3-954bde94fa4e)

--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-autocomplete-tags/dot-autocomplete-tags.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-autocomplete-tags/dot-autocomplete-tags.component.html
@@ -13,4 +13,4 @@
     field="label"
     dataKey="label"
     inputStyleClass="ui-inputtext "
-    appendTo="body"></p-autoComplete>
+    appendTo="body" />
