--- a/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/ai-image-prompt.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/ai-image-prompt.component.html
@@ -55,7 +55,7 @@
                 key="ai-image-prompt"
                 rejectButtonStyleClass="p-button-outlined"
                 acceptIcon="null"
-                rejectIcon="null"></p-confirmDialog>
+                rejectIcon="null" />
         </div>
     </p-dialog>
 }
