--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
@@ -1,88 +1,82 @@
-@if (uveStore.$toolbarProps(); as toolbarProps) {
-    <p-toolbar>
-        <div class="p-toolbar-group-left" data-testId="toolbar-left-content">
-            <dot-device-selector-seo
-                (selected)="updateCurrentDevice($event)"
-                (changeSeoMedia)="onSeoMediaChange($event)"
-                [apiLink]="toolbarProps.deviceSelector.apiLink"
-                [hideSocialMedia]="toolbarProps.deviceSelector.hideSocialMedia"
-                #deviceSelector
-                appendTo="body"
-                data-testId="dot-device-selector" />
+<p-toolbar>
+    <div class="p-toolbar-group-left" data-testId="toolbar-left-content">
+        <dot-device-selector-seo
+            (selected)="updateCurrentDevice($event)"
+            (changeSeoMedia)="onSeoMediaChange($event)"
+            [apiLink]="toolbarProps.deviceSelector.apiLink"
+            [hideSocialMedia]="toolbarProps.deviceSelector.hideSocialMedia"
+            #deviceSelector
+            appendTo="body"
+            data-testId="dot-device-selector" />
 
+        <p-button
+            (onClick)="deviceSelector.openMenu($event)"
+            [label]="'editpage.toolbar.preview.page' | dm"
+            icon="pi pi-desktop"
+            styleClass="p-button-text p-button-sm"
+            data-testId="ema-preview" />
+
+        @if (toolbarProps.urlContentMap; as urlContentMap) {
             <p-button
-                (onClick)="deviceSelector.openMenu($event)"
-                [label]="'editpage.toolbar.preview.page' | dm"
-                icon="pi pi-desktop"
+                (onClick)="editUrlContentMap.emit(urlContentMap)"
+                [label]="'editpage.toolbar.edit.url.map.content' | dm: [urlContentMap.contentType]"
+                icon="pi pi-pencil"
                 styleClass="p-button-text p-button-sm"
-                data-testId="ema-preview" />
+                data-testId="edit-url-content-map" />
+        }
 
-            @if (toolbarProps.urlContentMap; as urlContentMap) {
-                <p-button
-                    (onClick)="editUrlContentMap.emit(urlContentMap)"
-                    [label]="
-                        'editpage.toolbar.edit.url.map.content' | dm: [urlContentMap.contentType]
-                    "
-                    icon="pi pi-pencil"
-                    styleClass="p-button-text p-button-sm"
-                    data-testId="edit-url-content-map" />
-            }
+        <dot-ema-bookmarks [url]="toolbarProps.bookmarksUrl" />
+        <p-button
+            (cdkCopyToClipboardCopied)="triggerCopyToast()"
+            [cdkCopyToClipboard]="toolbarProps.copyUrl"
+            [label]="'editpage.header.copy' | dm"
+            icon="pi pi-copy"
+            styleClass="p-button-text p-button-sm"
+            data-testId="ema-copy-url" />
+        <a
+            [href]="toolbarProps.apiUrl"
+            [title]="toolbarProps.apiUrl"
+            class="p-button-sm p-button-text"
+            pButton
+            target="_blank"
+            data-testId="ema-api-link"
+            icon="pi pi-link"
+            label="API"></a>
+    </div>
+    <div class="p-toolbar-group-right" data-testId="toolbar-right-content">
+        @if (toolbarProps.runningExperiment; as runningExperiment) {
+            <dot-ema-running-experiment
+                [runningExperiment]="runningExperiment"
+                data-testId="ema-running-experiment" />
+        }
 
-            <dot-ema-bookmarks [url]="toolbarProps.bookmarksUrl" />
+        <dot-edit-ema-language-selector
+            (selected)="onLanguageSelected($event)"
+            [language]="toolbarProps.currentLanguage"
+            data-testId="language-selector" />
+
+        <dot-edit-ema-persona-selector
+            (selected)="onPersonaSelected($event)"
+            (despersonalize)="onDespersonalize($event)"
+            [pageId]="toolbarProps.personaSelector.pageId"
+            [value]="toolbarProps.personaSelector.value"
+            #personaSelector
+            data-testId="persona-selector" />
+
+        @if (toolbarProps.workflowActionsInode; as inode) {
+            <dot-edit-ema-workflow-actions (newPage)="handleNewPage($event)" [inode]="inode" />
+        }
+        @if (toolbarProps.unlockButton; as unlockButton) {
             <p-button
-                (cdkCopyToClipboardCopied)="triggerCopyToast()"
-                [cdkCopyToClipboard]="toolbarProps.copyUrlButton.pureURL"
-                [label]="'editpage.header.copy' | dm"
-                icon="pi pi-copy"
-                styleClass="p-button-text p-button-sm"
-                data-testId="ema-copy-url" />
-            <a
-                [href]="toolbarProps.apiLinkButton.apiURL"
-                [title]="toolbarProps.apiLinkButton.apiURL"
-                class="p-button-sm p-button-text"
-                pButton
-                target="_blank"
-                data-testId="ema-api-link"
-                icon="pi pi-link"
-                label="API"></a>
-        </div>
-        <div class="p-toolbar-group-right" data-testId="toolbar-right-content">
-            @if (toolbarProps.experimentBadge; as experimentBadge) {
-                <dot-ema-running-experiment
-                    [runningExperiment]="experimentBadge?.runningExperiment"
-                    data-testId="ema-running-experiment" />
-            }
+                (click)="unlockPage(unlockButton.inode)"
+                [label]="'Unlock' | dm"
+                [loading]="unlockButton.loading"
+                styleClass="p-button-sm"
+                data-testId="unlock-button"></p-button>
+        }
+    </div>
+</p-toolbar>
 
-            <dot-edit-ema-language-selector
-                (selected)="onLanguageSelected($event)"
-                [language]="toolbarProps.languageSelector.currentLanguage"
-                data-testId="language-selector" />
-
-            <dot-edit-ema-persona-selector
-                (selected)="onPersonaSelected($event)"
-                (despersonalize)="onDespersonalize($event)"
-                [pageId]="toolbarProps.personaSelector.pageId"
-                [value]="toolbarProps.personaSelector.value"
-                #personaSelector
-                data-testId="persona-selector" />
-
-            @if (toolbarProps.workflowActions; as workflowActions) {
-                <dot-edit-ema-workflow-actions
-                    (newPage)="handleNewPage($event)"
-                    [inode]="workflowActions.inode" />
-            }
-            @if (toolbarProps.unlockButton; as unlockButton) {
-                <p-button
-                    (click)="unlockPage(unlockButton.inode)"
-                    [label]="'Unlock' | dm"
-                    [loading]="unlockButton.loading"
-                    styleClass="p-button-sm"
-                    data-testId="unlock-button"></p-button>
-            }
-        </div>
-    </p-toolbar>
-
-    @if (toolbarProps.showInfoDisplay) {
-        <dot-ema-info-display data-testId="info-display" />
-    }
+@if (toolbarProps.showInfoDisplay) {
+    <dot-ema-info-display data-testId="info-display" />
 }
