chore: avoid important in css

--- a/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.scss
+++ b/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.scss
@@ -10,8 +10,8 @@
 
     .p-accordion-tab.p-accordion-tab-active {
         .p-toggleable-content {
-            height: auto !important;
-            overflow: auto !important;
+            height: auto;
+            overflow: auto;
         }
     }
 }
