fix bad signal implementation

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
@@ -3,8 +3,8 @@
         <dot-device-selector-seo
             (selected)="updateCurrentDevice($event)"
             (changeSeoMedia)="onSeoMediaChange($event)"
-            [apiLink]="toolbarProps.deviceSelector.apiLink"
-            [hideSocialMedia]="toolbarProps.deviceSelector.hideSocialMedia"
+            [apiLink]="$toolbarProps().deviceSelector.apiLink"
+            [hideSocialMedia]="$toolbarProps().deviceSelector.hideSocialMedia"
             #deviceSelector
             appendTo="body"
             data-testId="dot-device-selector" />
@@ -16,7 +16,7 @@
             styleClass="p-button-text p-button-sm"
             data-testId="ema-preview" />
 
-        @if (toolbarProps.urlContentMap; as urlContentMap) {
+        @if ($toolbarProps().urlContentMap; as urlContentMap) {
             <p-button
                 (onClick)="editUrlContentMap.emit(urlContentMap)"
                 [label]="'editpage.toolbar.edit.url.map.content' | dm: [urlContentMap.contentType]"
@@ -25,17 +25,17 @@
                 data-testId="edit-url-content-map" />
         }
 
-        <dot-ema-bookmarks [url]="toolbarProps.bookmarksUrl" />
+        <dot-ema-bookmarks [url]="$toolbarProps().bookmarksUrl" />
         <p-button
             (cdkCopyToClipboardCopied)="triggerCopyToast()"
-            [cdkCopyToClipboard]="toolbarProps.copyUrl"
+            [cdkCopyToClipboard]="$toolbarProps().copyUrl"
             [label]="'editpage.header.copy' | dm"
             icon="pi pi-copy"
             styleClass="p-button-text p-button-sm"
             data-testId="ema-copy-url" />
         <a
-            [href]="toolbarProps.apiUrl"
-            [title]="toolbarProps.apiUrl"
+            [href]="$toolbarProps().apiUrl"
+            [title]="$toolbarProps().apiUrl"
             class="p-button-sm p-button-text"
             pButton
             target="_blank"
@@ -44,7 +44,7 @@
             label="API"></a>
     </div>
     <div class="p-toolbar-group-right" data-testId="toolbar-right-content">
-        @if (toolbarProps.runningExperiment; as runningExperiment) {
+        @if ($toolbarProps().runningExperiment; as runningExperiment) {
             <dot-ema-running-experiment
                 [runningExperiment]="runningExperiment"
                 data-testId="ema-running-experiment" />
@@ -52,21 +52,21 @@
 
         <dot-edit-ema-language-selector
             (selected)="onLanguageSelected($event)"
-            [language]="toolbarProps.currentLanguage"
+            [language]="$toolbarProps().currentLanguage"
             data-testId="language-selector" />
 
         <dot-edit-ema-persona-selector
             (selected)="onPersonaSelected($event)"
             (despersonalize)="onDespersonalize($event)"
-            [pageId]="toolbarProps.personaSelector.pageId"
-            [value]="toolbarProps.personaSelector.value"
+            [pageId]="$toolbarProps().personaSelector.pageId"
+            [value]="$toolbarProps().personaSelector.value"
             #personaSelector
             data-testId="persona-selector" />
 
-        @if (toolbarProps.workflowActionsInode; as inode) {
+        @if ($toolbarProps().workflowActionsInode; as inode) {
             <dot-edit-ema-workflow-actions (newPage)="handleNewPage($event)" [inode]="inode" />
         }
-        @if (toolbarProps.unlockButton; as unlockButton) {
+        @if ($toolbarProps().unlockButton; as unlockButton) {
             <p-button
                 (click)="unlockPage(unlockButton.inode)"
                 [label]="'Unlock' | dm"
@@ -77,6 +77,6 @@
     </div>
 </p-toolbar>
 
-@if (toolbarProps.showInfoDisplay) {
+@if ($toolbarProps().showInfoDisplay) {
     <dot-ema-info-display data-testId="info-display" />
 }
