--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
@@ -1,20 +1,18 @@
-@if (uveStore.$shellProps(); as shellProps) {
-    @if (shellProps.canRead) {
-        <router-outlet (activate)="onActivateRoute($event)"></router-outlet>
-        <dot-edit-ema-navigation-bar
-            [items]="shellProps.items"
-            (action)="handleItemAction($event)"
-            data-testId="ema-nav-bar"></dot-edit-ema-navigation-bar>
-        <p-toast position="top-center" data-testId="ema-toast"></p-toast>
-        <dot-page-tools-seo
-            [currentPageUrlParams]="shellProps.seoParams"
-            #pageTools></dot-page-tools-seo>
+@if ($shellProps().canRead) {
+    <router-outlet (activate)="onActivateRoute($event)"></router-outlet>
+    <dot-edit-ema-navigation-bar
+        [items]="$shellProps().items"
+        (action)="handleItemAction($event)"
+        data-testId="ema-nav-bar"></dot-edit-ema-navigation-bar>
+    <p-toast position="top-center" data-testId="ema-toast"></p-toast>
+    <dot-page-tools-seo
+        [currentPageUrlParams]="$shellProps().seoParams"
+        #pageTools></dot-page-tools-seo>
+} @else {
+    @if ($shellProps().error.code === 401) {
+        <dot-not-license />
     } @else {
-        @if (shellProps.error.code === 401) {
-            <dot-not-license />
-        } @else {
-            <dot-info-page [info]="shellProps.error.pageInfo" />
-        }
+        <dot-info-page [info]="$shellProps().error.pageInfo" />
     }
 }
 
