--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
@@ -1,43 +1,43 @@
 <dot-edit-ema-toolbar (editUrlContentMap)="editContentMap($event)" />
 
-@if (editorProps.socialMedia && $ogTags() && ogTagsResults$) {
+@if ($editorProps().socialMedia && $ogTags() && ogTagsResults$) {
     <dot-results-seo-tool
-        [seoMedia]="editorProps.socialMedia"
+        [seoMedia]="$editorProps().socialMedia"
         [seoOGTags]="$ogTags()"
         [seoOGTagsResults]="ogTagsResults$"
         data-testId="results-seo-tool"></dot-results-seo-tool>
 }
-@if (editorProps.showEditorContent) {
+@if ($editorProps().showEditorContent) {
     <div class="editor-content" data-testId="editor-content">
         <div
             [ngClass]="{
-                'iframe-wrapper--device': editorProps.iframe.wrapper.isDevice
+                'iframe-wrapper--device': $editorProps().iframe.wrapper.isDevice
             }"
             [ngStyle]="{
-                width: editorProps.iframe.wrapper.width,
-                height: editorProps.iframe.wrapper.height
+                width: $editorProps().iframe.wrapper.width,
+                height: $editorProps().iframe.wrapper.height
             }"
             class="iframe-wrapper">
             <iframe
-                (load)="onIframePageLoad(editorProps.iframe.state)"
-                [src]="editorProps.iframe.src | safeUrl"
+                (load)="onIframePageLoad($editorProps().iframe.state)"
+                [src]="$editorProps().iframe.src | safeUrl"
                 [title]="host"
                 [ngStyle]="{
-                    pointerEvents: editorProps.iframe.pointerEvents,
-                    opacity: editorProps.iframe.opacity
+                    pointerEvents: $editorProps().iframe.pointerEvents,
+                    opacity: $editorProps().iframe.opacity
                 }"
                 #iframe
                 data-testId="iframe"
                 width="100%"
                 height="100%"></iframe>
-            @if (editorProps.progressBar) {
+            @if ($editorProps().progressBar) {
                 <p-progressBar
                     [ngStyle]="{ position: 'absolute', top: '0', left: '0', width: '100%' }"
                     [style]="{ height: '6px' }"
                     data-testId="progress-bar"
                     mode="indeterminate"></p-progressBar>
             }
-            @if (editorProps.contentletTools; as contentletTools) {
+            @if ($editorProps().contentletTools; as contentletTools) {
                 <dot-ema-contentlet-tools
                     (edit)="handleEditContentlet($event)"
                     (editVTL)="handleEditVTL($event)"
@@ -50,7 +50,7 @@
                     [isEnterprise]="contentletTools.isEnterprise"
                     data-testId="contentlet-tools" />
             }
-            @if (editorProps.dropzone; as dropzone) {
+            @if ($editorProps().dropzone; as dropzone) {
                 <dot-ema-page-dropzone
                     [containers]="dropzone.bounds"
                     [dragItem]="dropzone.dragItem"
@@ -59,14 +59,14 @@
         </div>
     </div>
 }
-@if (editorProps.palette; as palette) {
+@if ($editorProps().palette; as palette) {
     <dot-edit-ema-palette
         [languageId]="palette.languageId"
         [containers]="palette.containers"
         [variantId]="palette.variantId"
         data-testId="palette" />
 }
-@if (editorProps.dialogs) {
+@if ($editorProps().dialogs) {
     <dot-edit-ema-dialog
         (action)="onCustomEvent($event)"
         (reloadFromDialog)="reloadFromDialog()"
@@ -77,7 +77,7 @@
             width: '400px'
         }"
         rejectIcon="hidden"
-        acceditorPropstIcon="hidden"
+        acc$editorProps()tIcon="hidden"
         rejectButtonStyleClass="p-button-outlined"
         data-testId="confirm-dialog"></p-confirmDialog>
 }
